--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "seven_segmentregular";
+  src: url("./seven_segment.woff2") format("woff2"), url("./seven_segment.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 * {
   list-style-type: none;
 }
@@ -12,8 +18,9 @@
   height: 600px;
 }
 .calc__screen {
+  display: flex;
+  flex-direction: row-reverse;
   border: 1px solid aqua;
-  padding: 20px;
 }
 .calc__container2 {
   display: flex;
@@ -28,7 +35,25 @@
   cursor: pointer;
 }
 
-.stupid-font-awesome {
+#calc__screen__readout {
+  margin-right: 10px;
+  font-size: 40px;
+  font-family: seven_segmentregular;
+}
+#calc__screen__prev {
+  position: absolute;
+  margin: 1px 10px 0px 0px;
+  /* N E S W */
+  font-size: 20px;
+  font-family: seven_segmentregular;
+}
+
+#clear {
+  background-color: red;
+  border-radius: 5px;
+}
+
+#stupid-font-awesome {
   font-weight: 900;
   font-size: 30px;
 }
